* C-i: Show remote images (cid-type images are not supported yet).
* A-#: Page to # page.
* Add gravatar support
* C-p: Toggle auto poll.
* C-j / C-k: Jump and scroll to next or previous element.
* thread-index: C-Enter: open thread in new window.
* Add popup menu with some actions for the thread-index.
* Fix #23: Don't crash when message file is missing.

== v0.4 / 2015-08-15

* Mark threads with 't' or 'T' and apply actions to all marked threads
  with '+'.
* Mark messages with 't' or 'T' in thread-view and apply actions to all
  marked messages with '+'.
* Show attached icon in thread-view.
* #18: Fix display of &amp; and friends.
* Configurable quote string for replying and forwarding.
* Replying adds 'replied' tag to original.
* Forwarding adds 'passed' tag to original.
* Message is updated thread-index after being sent.
* Show spinner in main window when polling.
* Show status icon for message sending.
* Indent messages according to reply-level in thread (configurable).

== v0.3 / 2015-05-27

* Poll script only updates changed threads (if notmuch_get_rev.. is
  available).
* Show number of messages in tab title
* Escape means no
* Poll-script output is logged incrementally
* Got a desktop file.
* Different color of font and border of the first levels of quotes
* Configurable exclude tags
* Open attached MIME messages
* Auto-redraw thread-index every minute

== v0.2 / 2015-01-18

* Allow math to be rendered with MathJax! Enclose math with $ or $$,
  by default we are using MathJax online, but you can set this to
  your local installation as well. MathJax is enabled by default,
  and can also be enabled only for certain tags.

* Highlight code syntax between ``` markdown-style tags as well as
  patches sent as email.

* Partial mailto: support, check out --help.

* Switch tabs/pages using mouse.

* Double-click in thread index to open thread.

* Paging in thread index moves cursor.

* Do not load remote images or resources from html files.
