@@ -1,3 +1,4 @@
+/* ui-version: 1 (do not change when modifying theme for yourself) */
 /**
  * Background colors associated with received emails:
  *  recv-normal: white
