@@ -11,6 +11,7 @@
 * thread-index: C-Enter: open thread in new window.
 * Add popup menu with some actions for the thread-index.
 * Fix #23: Don't crash when message file is missing.
+* #25: Load html and css from config directory if present.
 
 == v0.4 / 2015-08-15
 
